// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/Pagination Check snapshots should renders correctly pagination range 1`] = `
<div
  className="consonant-pagination"
>
  <div
    className="consonant-pagination--paginator"
  >
    <button
      className="consonant-pagination--btn consonant-pagination--btn_prev"
      data-testid="btn_prev"
      onClick={[Function]}
      type="buttton"
    >
      previous
    </button>
    <ul
      className="consonant-pagination--items"
    >
      <li
        className="consonant-pagination--item"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </li>
    </ul>
    <button
      className="consonant-pagination--btn consonant-pagination--btn_next"
      data-testid="btn_next"
      onClick={[Function]}
      type="buttton"
    >
      next
    </button>
  </div>
  <div
    className="consonant-pagination--summary"
    data-testid="pagination--summary"
  >
    Showing
    <strong>
      -9-0
       of
    </strong>
    100
     Results
  </div>
</div>
`;

exports[`Consonant/Pagination Check snapshots should renders correctly pagination range 2`] = `
<div
  className="consonant-pagination"
>
  <div
    className="consonant-pagination--paginator"
  >
    <button
      className="consonant-pagination--btn consonant-pagination--btn_prev"
      data-testid="btn_prev"
      onClick={[Function]}
      type="buttton"
    >
      previous
    </button>
    <ul
      className="consonant-pagination--items"
    >
      <li
        className="consonant-pagination--item consonant-pagination--item_active"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </li>
      <li
        className="consonant-pagination--item"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          type="button"
        >
          0
        </button>
      </li>
    </ul>
    <button
      className="consonant-pagination--btn consonant-pagination--btn_next"
      data-testid="btn_next"
      onClick={[Function]}
      type="buttton"
    >
      next
    </button>
  </div>
  <div
    className="consonant-pagination--summary"
    data-testid="pagination--summary"
  >
    Showing
    <strong>
      1-10
       of
    </strong>
    100
     Results
  </div>
</div>
`;

exports[`Consonant/Pagination Check snapshots should renders correctly pagination range 3`] = `
<div
  className="consonant-pagination"
>
  <div
    className="consonant-pagination--paginator"
  >
    <button
      className="consonant-pagination--btn consonant-pagination--btn_prev"
      data-testid="btn_prev"
      onClick={[Function]}
      type="buttton"
    >
      previous
    </button>
    <ul
      className="consonant-pagination--items"
    >
      <li
        className="consonant-pagination--item"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </li>
      <li
        className="consonant-pagination--item consonant-pagination--item_active"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          type="button"
        >
          0
        </button>
      </li>
    </ul>
    <button
      className="consonant-pagination--btn consonant-pagination--btn_next"
      data-testid="btn_next"
      onClick={[Function]}
      type="buttton"
    >
      next
    </button>
  </div>
  <div
    className="consonant-pagination--summary"
    data-testid="pagination--summary"
  >
    Showing
    <strong>
      -9-0
       of
    </strong>
    100
     Results
  </div>
</div>
`;

exports[`Consonant/Pagination Check snapshots should renders correctly pagination range 4`] = `
<div
  className="consonant-pagination"
>
  <div
    className="consonant-pagination--paginator"
  >
    <button
      className="consonant-pagination--btn consonant-pagination--btn_prev"
      data-testid="btn_prev"
      onClick={[Function]}
      type="buttton"
    >
      previous
    </button>
    <ul
      className="consonant-pagination--items"
    >
      <li
        className="consonant-pagination--item consonant-pagination--item_active"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </li>
      <li
        className="consonant-pagination--item"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          type="button"
        >
          0
        </button>
      </li>
    </ul>
    <button
      className="consonant-pagination--btn consonant-pagination--btn_next"
      data-testid="btn_next"
      onClick={[Function]}
      type="buttton"
    >
      next
    </button>
  </div>
  <div
    className="consonant-pagination--summary"
    data-testid="pagination--summary"
  >
    Showing
    <strong>
      1-10
       of
    </strong>
    100
     Results
  </div>
</div>
`;

exports[`Consonant/Pagination Check snapshots should renders correctly pagination range 5`] = `
<div
  className="consonant-pagination"
>
  <div
    className="consonant-pagination--paginator"
  >
    <button
      className="consonant-pagination--btn consonant-pagination--btn_prev"
      data-testid="btn_prev"
      onClick={[Function]}
      type="buttton"
    >
      previous
    </button>
    <ul
      className="consonant-pagination--items"
    >
      <li
        className="consonant-pagination--item consonant-pagination--item_active"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </li>
    </ul>
    <button
      className="consonant-pagination--btn consonant-pagination--btn_next"
      data-testid="btn_next"
      onClick={[Function]}
      type="buttton"
    >
      next
    </button>
  </div>
  <div
    className="consonant-pagination--summary"
    data-testid="pagination--summary"
  >
    Showing
    <strong>
      1-10
       of
    </strong>
    100
     Results
  </div>
</div>
`;

exports[`Consonant/Pagination Check snapshots should renders correctly pagination range 6`] = `
<div
  className="consonant-pagination"
>
  <div
    className="consonant-pagination--paginator"
  >
    <button
      className="consonant-pagination--btn consonant-pagination--btn_prev"
      data-testid="btn_prev"
      onClick={[Function]}
      type="buttton"
    >
      previous
    </button>
    <ul
      className="consonant-pagination--items"
    >
      <li
        className="consonant-pagination--item"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </li>
    </ul>
    <button
      className="consonant-pagination--btn consonant-pagination--btn_next"
      data-testid="btn_next"
      onClick={[Function]}
      type="buttton"
    >
      next
    </button>
  </div>
  <div
    className="consonant-pagination--summary"
    data-testid="pagination--summary"
  >
    Showing
    <strong>
      -9-0
       of
    </strong>
    100
     Results
  </div>
</div>
`;
